add custom button component and update color and font constants; modify onboarding screen to include page view and navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   get: ^4.7.2
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  dots_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
