--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: ^6.2.1
   dots_indicator: ^4.0.1
   flutter_svg: ^2.0.17
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
